# appnew

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  format.ts  main.tsx  plannerState.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: MainBoard.tsx  SessionPanel.tsx  Sidebar.tsx
